<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VolumeWindow</class>
 <widget class="QDialog" name="VolumeWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Об'єм</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>20</y>
     <width>111</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>18</pointsize>
    </font>
   </property>
   <property name="text">
    <string>Об'єм</string>
   </property>
  </widget>
  <widget class="QLabel" name="figureName">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>40</y>
     <width>47</width>
     <height>13</height>
    </rect>
   </property>
   <property name="text">
    <string>TextLabel</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>65</x>
     <y>160</y>
     <width>281</width>
     <height>81</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="firstParamLabel">
        <property name="text">
         <string>FirstParam</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
      </item>
      <item>
       <widget class="QLabel" name="secondParamLabel">
        <property name="text">
         <string>SecondParam</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QDoubleSpinBox" name="doubleSpinBox_2"/>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPushButton" name="calsBtn">
      <property name="text">
       <string>Підрахувати</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QPushButton" name="getFromFileBtn">
   <property name="geometry">
    <rect>
     <x>234</x>
     <y>120</y>
     <width>111</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Зчитати з файлу</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
